<resources>
    <string name="app_name">cocsit-network</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Cocsit Network Logo</string>
    <string name="back_btn">back btn</string>
    <string name="create_an_account">Create an account</string>
    <string name="add_image">add image</string>
    <string name="name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">DOB</string>
    <string name="calender">Calender</string>
    <string name="mobile_no">Mobile No</string>
    <string name="email_address">Email Address</string>
    <string name="male_image">Male Image</string>
    <string name="proceed">Proceed</string>
    <string name="select_class">Select Class</string>
    <string name="select_division">Select Division</string>
    <string name="email_verification">Email Verification</string>
    <string name="enter_password">Enter password..</string>
    <string name="enter_email">Enter email..</string>
    <string name="next">Next</string>
    <string name="verify">Verify</string>
    <string name="create_username">Create Username</string>
    <string name="enter_username">Enter username ..</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="have_accout_login_account">Have accout ? Login account</string>
    <string name="cocsit">cocsit</string>
    <string name="network">-network</string>
    <string name="login_account">Login Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="signup">Signup</string>
    <string name="or">OR</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>


    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="notification_buttion">Notification Buttion</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="setting_">SETTING</string>
    <string name="notice_advisiory">notice/advisiory</string>
    <string name="cross">cross</string>
    <string name="notice_advisory">Notice/Advisory</string>
    <string name="search_here">Search Here</string>
    <string name="recent">Recent</string>

</resources>