<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/btnHome"
        android:title="@string/home"
        android:icon="@drawable/home"
        />
    <item
        android:id="@+id/btnSearch"
        android:title="@string/search"
        android:icon="@drawable/search"
        />

    <item
        android:id="@+id/btnCreatePost"
        android:title="@string/post"
        android:icon="@drawable/box_add_post"
        />

    <item
        android:id="@+id/btnMessage"
        android:title="@string/message"
        android:icon="@drawable/message"
        />
    <item
        android:id="@+id/btnProfile"
        android:title="@string/profile"
        android:icon="@drawable/profile"
        />


</menu>