<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FB9BD5"
    tools:context=".fragments.SettingFragment">

    <!-- Setting Fragments -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvSetting"
        android:layout_centerHorizontal="true"
        android:text="@string/setting_"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/cross"
        android:src="@drawable/cross"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNotice"
        android:layout_below="@id/tvSetting"
        android:layout_marginTop="200dp"
        android:layout_marginStart="120dp"
        android:contentDescription="@string/notice_advisiory"
        android:src="@drawable/notice"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNoticeAdvisiory"
        android:text="@string/notice_advisory"
        android:layout_toEndOf="@id/tvNotice"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="257dp"
        android:layout_marginStart="15dp"
        />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvProfile"
        android:layout_below="@id/tvNotice"
        android:layout_marginTop="20dp"
        android:layout_marginStart="120dp"
        android:contentDescription="@string/profile"
        android:src="@drawable/user_profile"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvUserProfile"
        android:text="@string/profile"
        android:layout_toEndOf="@id/tvNotice"
        android:layout_below="@id/tvNoticeAdvisiory"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvProfile"
        android:layout_marginTop="25dp"
        android:layout_marginStart="120dp"
        android:contentDescription="@string/logout"
        android:src="@drawable/logout"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvLogout"
        android:text="@string/logout"
        android:layout_toEndOf="@id/tvNotice"
        android:layout_below="@id/tvUserProfile"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        />


</RelativeLayout>