<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#6758BF"
    tools:context=".fragments.AuthenticationFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_verification"
        android:textSize="50sp"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textColor="#FF5722"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/emailLayout"
        android:layout_marginBottom="100dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        app:boxStrokeWidth="2dp"
        >

        <EditText
            android:id="@+id/etEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/emailLayout"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#000"
        >

        <EditText
            android:id="@+id/etPasswordPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:background="#273CB1"
        android:layout_below="@id/passwordLayout"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="#273CB1"
        android:layout_below="@id/btnVerify"
        android:layout_margin="30dp"
    />

    <TextView
        android:id="@+id/tvRegisterLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have accout ?? \n Create account"
        android:textAlignment="center"
        android:textColor="#F44108"
        android:textSize="15sp"
        android:layout_below="@id/btnNext"
        android:layout_centerInParent="true"
        android:enabled="false"
        />


</RelativeLayout>