<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.CreateUserNameFragment">

    <TextView
        android:id="@+id/createUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_username"
        android:textSize="50sp"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:textColor="#FF5722"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/createUsername"
        android:layout_marginTop="70dp"
        app:boxStrokeWidth="2dp"
        >

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_username"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/userNameLayout"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#000"
        app:boxStrokeWidth="2dp"
        >

        <EditText
            android:id="@+id/etUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@+id/passwordLayout"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#000"
        app:boxStrokeWidth="2dp"
        >

        <EditText
            android:id="@+id/etConfirmUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="#D80F31F4"
        android:layout_below="@id/confirmPasswordLayout"
        android:layout_margin="30dp"
        />


</RelativeLayout>